# dicom-viewer

./: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: anonymize.rs  dicom.rs  image_proc.rs  main.rs  mpr.rs  volume_rendering.rs
src/api/: index.ts
src/styles/: main.css
src/types/: index.ts
src/utils/: renderer.ts  transferFunction.ts  volumeRenderer.ts
