[package]
name = "dicom-viewer"
version = "0.1.0"
description = "A DICOM medical image viewer"
authors = ["you"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["dialog-all", "fs-all", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.5"
image = { version = "0.24", features = ["png", "jpeg", "jpeg_rayon"] }
walkdir = "2.4"
flate2 = "1.0"
num-traits = "0.2"
lazy_static = "1.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
